--- a/package.json
+++ b/package.json
@@ -11,8 +11,12 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.1.0",
+    "@tato30/vue-pdf": "^1.9.5",
     "element-plus": "^2.5.5",
+    "emailjs": "^4.0.3",
     "vue": "^3.4.15",
+    "vue-i18n": "^9.9.0",
     "vue-router": "^4.2.5"
   },
   "devDependencies": {
